css fix - clock container hidden by default

--- a/assets/stylesheets/landing-page.scss
+++ b/assets/stylesheets/landing-page.scss
@@ -18,6 +18,7 @@
 
 .clockMain {
     margin-bottom: 80px;
+    display: none;
 }
 
 .clockWrapper {
